--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,6 +39,9 @@ jobs:
         echo "Running Test Suite 2 on localhost"
         npm run test-routes
         
+    - name: List files
+      run: ls -R playwright-report 
+      
     - name: Upload report as artifact
       uses: actions/upload-artifact@v3
       with:
