--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,13 +31,13 @@ jobs:
       
     - name: Run Test Suite 1
       run: |
-        echo "Running Test Suite 1 on localhost"
+        echo "Running Test Suite 1"
         export SUITE=services
         npm run test-services
 
     - name: Run Test Suite 2
       run: |
-        echo "Running Test Suite 2 on localhost"
+        echo "Running Test Suite 2"
         export SUITE=routes
         npm run test-routes
         
